c4prj2_input/grade.txt
Grading at Thu Aug  1 12:28:29 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c:7:45: error: unknown type name ‘futrue_cards_t’
 deck_t * hand_from_string(const char * str, futrue_cards_t * fc){
                                             ^
input.c: In function ‘read_input’:
input.c:39:3: error: ‘sz’ undeclared (first use in this function)
   sz = 0;
   ^
input.c:39:3: note: each undeclared identifier is reported only once for each function it appears in
input.c:44:15: error: implicit declaration of function ‘hand_from_string’ [-Werror=implicit-function-declaration]
     deckPtr = hand_from_string(buffer,fc);
               ^
input.c:44:13: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     deckPtr = hand_from_string(buffer,fc);
             ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
